--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -121,3 +121,4 @@ div.highlighter-rouge, figure.highlight {
 .highlight .vg { color: #22b3eb } /* Name.Variable.Global */
 .highlight .vi { color: #22b3eb } /* Name.Variable.Instance */
 .highlight .il { color: #2aa198 } /* Literal.Number.Integer.Long */
+.highlight .language-rm { font-size: 1.2em }
